--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
     <section id="one">
         <div class="container">
             <header class="major">
-                <h2>Read Only</h2>
-                <p>Just an incredibly simple responsive site<br />
-                template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+                <h2>田源的博客</h2>
+                <p>分享一些项目开发指南，学习笔记</p>
             </header>
-            <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+            <p>一年一度秋风劲，不似春光。胜似春光，寥廓江天万里霜。</p>
         </div>
     </section>
 
@@ -124,9 +123,8 @@
         <div class="container">
             <ul class="copyright">
                 <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Demo Images: <a href="https://unsplash.com/">Unsplash</a></li>
-                <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+                <li>所有者: 田源</li>
+                <li>联系我:tianyuan01528@foxmail.com</li>
             </ul>
         </div>
     </section>
