--- a/contact/index.html
+++ b/contact/index.html
@@ -60,7 +60,7 @@
             <div id="main">
                 <section id="one">
     <div class="container">
-        <h3>Contact Me</h3>
+        <h3>联系我</h3>
         <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
         <form method="post" action="#">
             <div class="row uniform">
@@ -92,9 +92,8 @@
         <div class="container">
             <ul class="copyright">
                 <li>&copy; Untitled. All rights reserved.</li>
-                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-                <li>Demo Images: <a href="https://unsplash.com/">Unsplash</a></li>
-                <li>Jekyll Template: <a href="http://cloudcannon.com">Cloud Cannon</a></li>
+                <li>所有者: 田源</li>
+                <li>联系我:tianyuan01528@foxmail.com</li>
             </ul>
         </div>
     </section>
