--- a/index.html
+++ b/index.html
@@ -1,63 +1,8 @@
-<!DOCTYPE HTML>
-<!--
-	Read Only by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-    
-	<head>
-		<title>田源的博客</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="/tianyuan.github.io/js/jquery.min.js"></script>
-		<script src="/tianyuan.github.io/js/jquery.scrollzer.min.js"></script>
-		<script src="/tianyuan.github.io/js/jquery.scrolly.min.js"></script>
-		<script src="/tianyuan.github.io/js/skel.min.js"></script>
-		<script src="/tianyuan.github.io/js/skel-layers.min.js"></script>
-		<script src="/tianyuan.github.io/js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="/tianyuan.github.io/css/skel.css" />
-			<link rel="stylesheet" href="/tianyuan.github.io/css/style.css" />
-			<link rel="stylesheet" href="/tianyuan.github.io/css/style-xlarge.css" />
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-	</head>
-		
-    <body>
-        <div id="wrapper">
-        <!-- Header -->
-    <section id="header" class="skel-layers-fixed">
-        <header>
-            <span class="image avatar"><img src="/tianyuan.github.io/images/touxiang.png" alt="" /></span>
-            <h1 id="logo"><a href="/tianyuan.github.io/">田源</a></h1>
-            <p>一个干机器学习活儿的社畜</p>
-        </header>
-        <nav id="nav">
-            <ul>
-                <li><a href="/tianyuan.github.io/">首页</a></li>
-                <li><a href="/tianyuan.github.io/blog">博客</a></li>
-                <li><a href="/tianyuan.github.io/contact">滴滴我</a></li>
-            </ul>
-        </nav>
-        <footer>
-            <ul class="icons">
-                <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-            </ul>
-        </footer>
-    </section>
+---
+layout: default
+---
 
-
-
-            <!-- Main -->
-            <div id="main">
-                <!-- One -->
+<!-- One -->
     <section id="one">
         <div class="container">
             <header class="major">
@@ -114,20 +59,3 @@
             </div>
         </div>
     </section>
-
-
-            </div>
-            <!-- Footer -->
-    <section id="footer">
-        <div class="container">
-            <ul class="copyright">
-                <li>&copy; Untitled. All rights reserved.</li>
-                <li>所有者: 田源</li>
-                <li>联系我:tianyuan01528@foxmail.com</li>
-            </ul>
-        </div>
-    </section>
-
-		</div>
-	</body>
-</html>
