wait for tensorflow update

--- a/index.html
+++ b/index.html
@@ -16,21 +16,22 @@ layout: default
 <!-- Two -->
     <section id="two">
         <div class="container">
-            <h3>Things I Can Do</h3>
-            <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+            <h3>亮点
+            </h3>
+            <!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
             <ul class="feature-icons">
-                <li class="fa-code">Write all the code</li>
-                <li class="fa-cubes">Stack small boxes</li>
-                <li class="fa-book">Read books and stuff</li>
-                <li class="fa-coffee">Drink much coffee</li>
-                <li class="fa-bolt">Lightning bolt</li>
-                <li class="fa-users">Shadow clone technique</li>
+                <li class="fa-code">C,Python,Java,Go</li>
+                <li class="fa-linux">linux,shell,docker</li>
+                <li class="fa-cubes">嵌入式设备,单片机</li>
+                <li class="fa-angellist">“电路板焊的特别漂亮”</li>
+                <li class="fa-bitcoin">币圈挖矿小能手</li>
+                <li class="fa-check">一米八</li>
             </ul>
         </div>
     </section>
 
 <!-- Three -->
-    <section id="three">
+    <!-- <section id="three">
         <div class="container">
             <h3>A Few Accomplishments</h3>
             <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
@@ -58,4 +59,4 @@ layout: default
                 </article>
             </div>
         </div>
-    </section>
+    </section> -->
