--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ layout: default
             </h3>
             <!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p> -->
             <ul class="feature-icons">
-                <li class="fa-code">C,Python,Java,Go</li>
+                <li class="fa-code">Python,Go,人工智能</li>
                 <li class="fa-linux">linux,shell,docker</li>
-                <li class="fa-cubes">嵌入式设备,单片机</li>
+                <li class="fa-cubes">嵌入式设备</li>
                 <li class="fa-angellist">“电路板焊的特别漂亮”</li>
-                <li class="fa-bitcoin">币圈挖矿小能手</li>
+                <li class="fa-bitcoin">币圈</li>
                 <li class="fa-check">一米八</li>
             </ul>
         </div>
